TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Atribuicoes Instrucoes
Rule 2     Programa -> Instrucoes
Rule 3     Programa -> Atribuicoes
Rule 4     Programa -> error
Rule 5     Atribuicoes -> Atribuicoes Atribuicao
Rule 6     Atribuicoes -> Atribuicao
Rule 7     Instrucoes -> Instrucoes Instrucao
Rule 8     Instrucoes -> Instrucao
Rule 9     Atribuicao -> INTR AtribuicoesINT ;
Rule 10    AtribuicoesINT -> AtribuicaoINT
Rule 11    AtribuicoesINT -> AtribuicoesINT , AtribuicaoINT
Rule 12    AtribuicaoINT -> ID = Expressao
Rule 13    AtribuicaoINT -> ID
Rule 14    Atribuicao -> FLOATR AtribuicoesFLOAT ;
Rule 15    AtribuicoesFLOAT -> AtribuicaoFLOAT
Rule 16    AtribuicoesFLOAT -> AtribuicoesFLOAT , AtribuicaoFLOAT
Rule 17    AtribuicaoFLOAT -> ID = Expressao
Rule 18    AtribuicaoFLOAT -> ID
Rule 19    Atribuicao -> STRR AtribuicoesSTRING ;
Rule 20    AtribuicoesSTRING -> AtribuicaoSTRING
Rule 21    AtribuicoesSTRING -> AtribuicoesSTRING , AtribuicaoSTRING
Rule 22    AtribuicaoSTRING -> ID = String ;
Rule 23    Atribuicao -> INTR ID [ INT ] ;
Rule 24    Arrays -> Array
Rule 25    Array -> [ Elementos ]
Rule 26    Elementos -> Elementos , INT
Rule 27    Elementos -> INT
Rule 28    Atribuicao -> INTR ID [ INT ] [ INT ] ;
Rule 29    Matriz -> [ Arrays ]
Rule 30    Arrays -> Arrays , Array
Rule 31    Atribuicao -> INTR ID [ INT ] = Array ;
Rule 32    Atribuicao -> INTR ID [ Vazio ] = Array ;
Rule 33    Atribuicao -> INTR ID [ Vazio ] = Matriz ;
Rule 34    Atribuicao -> INTR error ;
Rule 35    Atribuicao -> FLOATR error ;
Rule 36    Atribuicao -> STRR error ;
Rule 37    Instrucao -> Atualiza ;
Rule 38    Atualiza -> VARINT = Expressao
Rule 39    Atualiza -> VARFLOAT = ExpressaoFloat
Rule 40    Atualiza -> VARSTRING = String
Rule 41    Atualiza -> VARINT PP
Rule 42    Atualiza -> VARINT MM
Rule 43    Atualiza -> VARFLOAT PP
Rule 44    Atualiza -> VARFLOAT MM
Rule 45    Atualiza -> VARARRAY [ Expressao ] = Expressao
Rule 46    Atualiza -> VARARRAY [ Expressao ] [ Expressao ] = Expressao
Rule 47    Atualiza -> VARFLOAT = Expressao
Rule 48    Atualiza -> VARINT = ExpressaoFloat
Rule 49    Instrucao -> PRINT ( Expressao ) ;
Rule 50    Instrucao -> PRINT ( ExpLogica ) ;
Rule 51    Instrucao -> PRINT ( ExpressaoFloat ) ;
Rule 52    Instrucao -> PRINT ( String ) ;
Rule 53    Instrucao -> PRINTLN ( Expressao ) ;
Rule 54    Instrucao -> PRINTLN ( ExpLogica ) ;
Rule 55    Instrucao -> PRINTLN ( ExpressaoFloat ) ;
Rule 56    Instrucao -> PRINTLN ( String ) ;
Rule 57    Instrucao -> IF Boolean { Instrucoes }
Rule 58    Instrucao -> IF Boolean { Instrucoes } Else
Rule 59    Else -> ELSE { Instrucoes }
Rule 60    Else -> ELSE IF Boolean { Instrucoes } Else
Rule 61    Instrucao -> FOR ( Atualiza ; Boolean ; Atualiza ) { Instrucoes }
Rule 62    Instrucao -> FOR ( Vazio ; Boolean ; Atualiza ) { Instrucoes }
Rule 63    Instrucao -> WHILE Boolean { Instrucoes }
Rule 64    Boolean -> Expressao
Rule 65    Boolean -> ExpLogica
Rule 66    String -> LINHA
Rule 67    String -> VARSTRING
Rule 68    String -> INPUT ( )
Rule 69    Vazio -> <empty>
Rule 70    Expressao -> Expressao + Expressao
Rule 71    Expressao -> Expressao - Expressao
Rule 72    Expressao -> Expressao * Expressao
Rule 73    Expressao -> Expressao / Expressao
Rule 74    Expressao -> Expressao % Expressao
Rule 75    ExpressaoFloat -> ExpressaoFloat + ExpressaoFloat
Rule 76    ExpressaoFloat -> ExpressaoFloat - ExpressaoFloat
Rule 77    ExpressaoFloat -> ExpressaoFloat * ExpressaoFloat
Rule 78    ExpressaoFloat -> ExpressaoFloat / ExpressaoFloat
Rule 79    ExpressaoFloat -> Expressao + ExpressaoFloat
Rule 80    ExpressaoFloat -> Expressao - ExpressaoFloat
Rule 81    ExpressaoFloat -> Expressao * ExpressaoFloat
Rule 82    ExpressaoFloat -> Expressao / ExpressaoFloat
Rule 83    ExpressaoFloat -> ExpressaoFloat + Expressao
Rule 84    ExpressaoFloat -> ExpressaoFloat - Expressao
Rule 85    ExpressaoFloat -> ExpressaoFloat * Expressao
Rule 86    ExpressaoFloat -> ExpressaoFloat / Expressao
Rule 87    Valor -> VARINT
Rule 88    ValorFloat -> VARFLOAT
Rule 89    Valor -> VARARRAY [ Expressao ]
Rule 90    Valor -> VARARRAY [ Expressao ] [ Expressao ]
Rule 91    Valor -> INT
Rule 92    ValorFloat -> FLOAT
Rule 93    Valor -> INTR ( String )
Rule 94    ValorFloat -> FLOATR ( String )
Rule 95    Valor -> INTR ( ExpressaoFloat )
Rule 96    ValorFloat -> FLOATR ( Expressao )
Rule 97    Expressao -> Valor
Rule 98    ExpressaoFloat -> ValorFloat
Rule 99    Expressao -> ( Expressao )
Rule 100   ExpressaoFloat -> ( ExpressaoFloat )
Rule 101   ExpLogica -> Expressao EQUAL Expressao
Rule 102   ExpLogica -> Expressao DIFF Expressao
Rule 103   ExpLogica -> Expressao > Expressao
Rule 104   ExpLogica -> Expressao < Expressao
Rule 105   ExpLogica -> Expressao GEQUAL Expressao
Rule 106   ExpLogica -> Expressao LEQUAL Expressao
Rule 107   ExpLogica -> ExpressaoFloat EQUAL ExpressaoFloat
Rule 108   ExpLogica -> ExpressaoFloat DIFF ExpressaoFloat
Rule 109   ExpLogica -> ExpressaoFloat > ExpressaoFloat
Rule 110   ExpLogica -> ExpressaoFloat < ExpressaoFloat
Rule 111   ExpLogica -> ExpressaoFloat GEQUAL ExpressaoFloat
Rule 112   ExpLogica -> ExpressaoFloat LEQUAL ExpressaoFloat
Rule 113   ExpLogica -> Expressao EQUAL ExpressaoFloat
Rule 114   ExpLogica -> Expressao DIFF ExpressaoFloat
Rule 115   ExpLogica -> Expressao > ExpressaoFloat
Rule 116   ExpLogica -> Expressao < ExpressaoFloat
Rule 117   ExpLogica -> Expressao GEQUAL ExpressaoFloat
Rule 118   ExpLogica -> Expressao LEQUAL ExpressaoFloat
Rule 119   ExpLogica -> ExpressaoFloat EQUAL Expressao
Rule 120   ExpLogica -> ExpressaoFloat DIFF Expressao
Rule 121   ExpLogica -> ExpressaoFloat > Expressao
Rule 122   ExpLogica -> ExpressaoFloat < Expressao
Rule 123   ExpLogica -> ExpressaoFloat GEQUAL Expressao
Rule 124   ExpLogica -> ExpressaoFloat LEQUAL Expressao
Rule 125   ExpLogica -> ( ExpLogica )
Rule 126   ExpLogica -> ExpLogica AND ExpLogica
Rule 127   ExpLogica -> ExpLogica OR ExpLogica
Rule 128   ExpLogica -> NOT ExpLogica

Terminals, with rules where they appear

%                    : 74
(                    : 49 50 51 52 53 54 55 56 61 62 68 93 94 95 96 99 100 125
)                    : 49 50 51 52 53 54 55 56 61 62 68 93 94 95 96 99 100 125
*                    : 72 77 81 85
+                    : 70 75 79 83
,                    : 11 16 21 26 30
-                    : 71 76 80 84
/                    : 73 78 82 86
;                    : 9 14 19 22 23 28 31 32 33 34 35 36 37 49 50 51 52 53 54 55 56 61 61 62 62
<                    : 104 110 116 122
=                    : 12 17 22 31 32 33 38 39 40 45 46 47 48
>                    : 103 109 115 121
AND                  : 126
DIFF                 : 102 108 114 120
ELSE                 : 59 60
EQUAL                : 101 107 113 119
FLOAT                : 92
FLOATR               : 14 35 94 96
FOR                  : 61 62
GEQUAL               : 105 111 117 123
ID                   : 12 13 17 18 22 23 28 31 32 33
IF                   : 57 58 60
INPUT                : 68
INT                  : 23 26 27 28 28 31 91
INTR                 : 9 23 28 31 32 33 34 93 95
LEQUAL               : 106 112 118 124
LINHA                : 66
MM                   : 42 44
NOT                  : 128
OR                   : 127
PP                   : 41 43
PRINT                : 49 50 51 52
PRINTLN              : 53 54 55 56
STRR                 : 19 36
VARARRAY             : 45 46 89 90
VARFLOAT             : 39 43 44 47 88
VARINT               : 38 41 42 48 87
VARSTRING            : 40 67
WHILE                : 63
[                    : 23 25 28 28 29 31 32 33 45 46 46 89 90 90
]                    : 23 25 28 28 29 31 32 33 45 46 46 89 90 90
error                : 4 34 35 36
{                    : 57 58 59 60 61 62 63
}                    : 57 58 59 60 61 62 63

Nonterminals, with rules where they appear

Array                : 24 30 31 32
Arrays               : 29 30
Atribuicao           : 5 6
AtribuicaoFLOAT      : 15 16
AtribuicaoINT        : 10 11
AtribuicaoSTRING     : 20 21
Atribuicoes          : 1 3 5
AtribuicoesFLOAT     : 14 16
AtribuicoesINT       : 9 11
AtribuicoesSTRING    : 19 21
Atualiza             : 37 61 61 62
Boolean              : 57 58 60 61 62 63
Elementos            : 25 26
Else                 : 58 60
ExpLogica            : 50 54 65 125 126 126 127 127 128
Expressao            : 12 17 38 45 45 46 46 46 47 49 53 64 70 70 71 71 72 72 73 73 74 74 79 80 81 82 83 84 85 86 89 90 90 96 99 101 101 102 102 103 103 104 104 105 105 106 106 113 114 115 116 117 118 119 120 121 122 123 124
ExpressaoFloat       : 39 48 51 55 75 75 76 76 77 77 78 78 79 80 81 82 83 84 85 86 95 100 107 107 108 108 109 109 110 110 111 111 112 112 113 114 115 116 117 118 119 120 121 122 123 124
Instrucao            : 7 8
Instrucoes           : 1 2 7 57 58 59 60 61 62 63
Matriz               : 33
Programa             : 0
String               : 22 40 52 56 93 94
Valor                : 97
ValorFloat           : 98
Vazio                : 32 33 62

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Atribuicoes Instrucoes
    (2) Programa -> . Instrucoes
    (3) Programa -> . Atribuicoes
    (4) Programa -> . error
    (5) Atribuicoes -> . Atribuicoes Atribuicao
    (6) Atribuicoes -> . Atribuicao
    (7) Instrucoes -> . Instrucoes Instrucao
    (8) Instrucoes -> . Instrucao
    (9) Atribuicao -> . INTR AtribuicoesINT ;
    (14) Atribuicao -> . FLOATR AtribuicoesFLOAT ;
    (19) Atribuicao -> . STRR AtribuicoesSTRING ;
    (23) Atribuicao -> . INTR ID [ INT ] ;
    (28) Atribuicao -> . INTR ID [ INT ] [ INT ] ;
    (31) Atribuicao -> . INTR ID [ INT ] = Array ;
    (32) Atribuicao -> . INTR ID [ Vazio ] = Array ;
    (33) Atribuicao -> . INTR ID [ Vazio ] = Matriz ;
    (34) Atribuicao -> . INTR error ;
    (35) Atribuicao -> . FLOATR error ;
    (36) Atribuicao -> . STRR error ;
    (37) Instrucao -> . Atualiza ;
    (49) Instrucao -> . PRINT ( Expressao ) ;
    (50) Instrucao -> . PRINT ( ExpLogica ) ;
    (51) Instrucao -> . PRINT ( ExpressaoFloat ) ;
    (52) Instrucao -> . PRINT ( String ) ;
    (53) Instrucao -> . PRINTLN ( Expressao ) ;
    (54) Instrucao -> . PRINTLN ( ExpLogica ) ;
    (55) Instrucao -> . PRINTLN ( ExpressaoFloat ) ;
    (56) Instrucao -> . PRINTLN ( String ) ;
    (57) Instrucao -> . IF Boolean { Instrucoes }
    (58) Instrucao -> . IF Boolean { Instrucoes } Else
    (61) Instrucao -> . FOR ( Atualiza ; Boolean ; Atualiza ) { Instrucoes }
    (62) Instrucao -> . FOR ( Vazio ; Boolean ; Atualiza ) { Instrucoes }
    (63) Instrucao -> . WHILE Boolean { Instrucoes }
    (38) Atualiza -> . VARINT = Expressao
    (39) Atualiza -> . VARFLOAT = ExpressaoFloat
    (40) Atualiza -> . VARSTRING = String
    (41) Atualiza -> . VARINT PP
    (42) Atualiza -> . VARINT MM
    (43) Atualiza -> . VARFLOAT PP
    (44) Atualiza -> . VARFLOAT MM
    (45) Atualiza -> . VARARRAY [ Expressao ] = Expressao
    (46) Atualiza -> . VARARRAY [ Expressao ] [ Expressao ] = Expressao
    (47) Atualiza -> . VARFLOAT = Expressao
    (48) Atualiza -> . VARINT = ExpressaoFloat

    error           shift and go to state 4
    INTR            shift and go to state 7
    FLOATR          shift and go to state 8
    STRR            shift and go to state 9
    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    VARINT          shift and go to state 16
    VARFLOAT        shift and go to state 17
    VARSTRING       shift and go to state 18
    VARARRAY        shift and go to state 19

    Programa                       shift and go to state 1
    Atribuicoes                    shift and go to state 2
    Instrucoes                     shift and go to state 3
    Atribuicao                     shift and go to state 5
    Instrucao                      shift and go to state 6
    Atualiza                       shift and go to state 10

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Atribuicoes . Instrucoes
    (3) Programa -> Atribuicoes .
    (5) Atribuicoes -> Atribuicoes . Atribuicao
    (7) Instrucoes -> . Instrucoes Instrucao
    (8) Instrucoes -> . Instrucao
    (9) Atribuicao -> . INTR AtribuicoesINT ;
    (14) Atribuicao -> . FLOATR AtribuicoesFLOAT ;
    (19) Atribuicao -> . STRR AtribuicoesSTRING ;
    (23) Atribuicao -> . INTR ID [ INT ] ;
    (28) Atribuicao -> . INTR ID [ INT ] [ INT ] ;
    (31) Atribuicao -> . INTR ID [ INT ] = Array ;
    (32) Atribuicao -> . INTR ID [ Vazio ] = Array ;
    (33) Atribuicao -> . INTR ID [ Vazio ] = Matriz ;
    (34) Atribuicao -> . INTR error ;
    (35) Atribuicao -> . FLOATR error ;
    (36) Atribuicao -> . STRR error ;
    (37) Instrucao -> . Atualiza ;
    (49) Instrucao -> . PRINT ( Expressao ) ;
    (50) Instrucao -> . PRINT ( ExpLogica ) ;
    (51) Instrucao -> . PRINT ( ExpressaoFloat ) ;
    (52) Instrucao -> . PRINT ( String ) ;
    (53) Instrucao -> . PRINTLN ( Expressao ) ;
    (54) Instrucao -> . PRINTLN ( ExpLogica ) ;
    (55) Instrucao -> . PRINTLN ( ExpressaoFloat ) ;
    (56) Instrucao -> . PRINTLN ( String ) ;
    (57) Instrucao -> . IF Boolean { Instrucoes }
    (58) Instrucao -> . IF Boolean { Instrucoes } Else
    (61) Instrucao -> . FOR ( Atualiza ; Boolean ; Atualiza ) { Instrucoes }
    (62) Instrucao -> . FOR ( Vazio ; Boolean ; Atualiza ) { Instrucoes }
    (63) Instrucao -> . WHILE Boolean { Instrucoes }
    (38) Atualiza -> . VARINT = Expressao
    (39) Atualiza -> . VARFLOAT = ExpressaoFloat
    (40) Atualiza -> . VARSTRING = String
    (41) Atualiza -> . VARINT PP
    (42) Atualiza -> . VARINT MM
    (43) Atualiza -> . VARFLOAT PP
    (44) Atualiza -> . VARFLOAT MM
    (45) Atualiza -> . VARARRAY [ Expressao ] = Expressao
    (46) Atualiza -> . VARARRAY [ Expressao ] [ Expressao ] = Expressao
    (47) Atualiza -> . VARFLOAT = Expressao
    (48) Atualiza -> . VARINT = ExpressaoFloat

    $end            reduce using rule 3 (Programa -> Atribuicoes .)
    INTR            shift and go to state 7
    FLOATR          shift and go to state 8
    STRR            shift and go to state 9
    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    VARINT          shift and go to state 16
    VARFLOAT        shift and go to state 17
    VARSTRING       shift and go to state 18
    VARARRAY        shift and go to state 19

    Instrucoes                     shift and go to state 20
    Atribuicao                     shift and go to state 21
    Instrucao                      shift and go to state 6
    Atualiza                       shift and go to state 10

state 3

    (2) Programa -> Instrucoes .
    (7) Instrucoes -> Instrucoes . Instrucao
    (37) Instrucao -> . Atualiza ;
    (49) Instrucao -> . PRINT ( Expressao ) ;
    (50) Instrucao -> . PRINT ( ExpLogica ) ;
    (51) Instrucao -> . PRINT ( ExpressaoFloat ) ;
    (52) Instrucao -> . PRINT ( String ) ;
    (53) Instrucao -> . PRINTLN ( Expressao ) ;
    (54) Instrucao -> . PRINTLN ( ExpLogica ) ;
    (55) Instrucao -> . PRINTLN ( ExpressaoFloat ) ;
    (56) Instrucao -> . PRINTLN ( String ) ;
    (57) Instrucao -> . IF Boolean { Instrucoes }
    (58) Instrucao -> . IF Boolean { Instrucoes } Else
    (61) Instrucao -> . FOR ( Atualiza ; Boolean ; Atualiza ) { Instrucoes }
    (62) Instrucao -> . FOR ( Vazio ; Boolean ; Atualiza ) { Instrucoes }
    (63) Instrucao -> . WHILE Boolean { Instrucoes }
    (38) Atualiza -> . VARINT = Expressao
    (39) Atualiza -> . VARFLOAT = ExpressaoFloat
    (40) Atualiza -> . VARSTRING = String
    (41) Atualiza -> . VARINT PP
    (42) Atualiza -> . VARINT MM
    (43) Atualiza -> . VARFLOAT PP
    (44) Atualiza -> . VARFLOAT MM
    (45) Atualiza -> . VARARRAY [ Expressao ] = Expressao
    (46) Atualiza -> . VARARRAY [ Expressao ] [ Expressao ] = Expressao
    (47) Atualiza -> . VARFLOAT = Expressao
    (48) Atualiza -> . VARINT = ExpressaoFloat

    $end            reduce using rule 2 (Programa -> Instrucoes .)
    PRINT           shift and go to state 11
    PRINTLN         shift and go to state 12
    IF              shift and go to state 13
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    VARINT          shift and go to state 16
    VARFLOAT        shift and go to state 17
    VARSTRING       shift and go to state 18
    VARARRAY        shift and go to state 19

    Instrucao                      shift and go to state 22
    Atualiza                       shift and go to state 10

state 4

    (4) Programa -> error .

    $end            reduce using rule 4 (Programa -> error .)


state 5

    (6) Atribuicoes -> Atribuicao .

    INTR            reduce using rule 6 (Atribuicoes -> Atribuicao .)
    FLOATR          reduce using rule 6 (Atribuicoes -> Atribuicao .)
    STRR            reduce using rule 6 (Atribuicoes -> Atribuicao .)
    PRINT           reduce using rule 6 (Atribuicoes -> Atribuicao .)
    PRINTLN         reduce using rule 6 (Atribuicoes -> Atribuicao .)
    IF              reduce using rule 6 (Atribuicoes -> Atribuicao .)
    FOR             reduce using rule 6 (Atribuicoes -> Atribuicao .)
    WHILE           reduce using rule 6 (Atribuicoes -> Atribuicao .)
    VARINT          reduce using rule 6 (Atribuicoes -> Atribuicao .)
    VARFLOAT        reduce using rule 6 (Atribuicoes -> Atribuicao .)
    VARSTRING       reduce using rule 6 (Atribuicoes -> Atribuicao .)
    VARARRAY        reduce using rule 6 (Atribuicoes -> Atribuicao .)
    $end            reduce using rule 6 (Atribuicoes -> Atribuicao .)


state 6

    (8) Instrucoes -> Instrucao .

    PRINT           reduce using rule 8 (Instrucoes -> Instrucao .)
    PRINTLN         reduce using rule 8 (Instrucoes -> Instrucao .)
    IF              reduce using rule 8 (Instrucoes -> Instrucao .)
    FOR             reduce using rule 8 (Instrucoes -> Instrucao .)
    WHILE           reduce using rule 8 (Instrucoes -> Instrucao .)
    VARINT          reduce using rule 8 (Instrucoes -> Instrucao .)
    VARFLOAT        reduce using rule 8 (Instrucoes -> Instrucao .)
    VARSTRING       reduce using rule 8 (Instrucoes -> Instrucao .)
    VARARRAY        reduce using rule 8 (Instrucoes -> Instrucao .)
    $end            reduce using rule 8 (Instrucoes -> Instrucao .)
    }               reduce using rule 8 (Instrucoes -> Instrucao .)


state 7

    (9) Atribuicao -> INTR . AtribuicoesINT ;
    (23) Atribuicao -> INTR . ID [ INT ] ;
    (28) Atribuicao -> INTR . ID [ INT ] [ INT ] ;
    (31) Atribuicao -> INTR . ID [ INT ] = Array ;
    (32) Atribuicao -> INTR . ID [ Vazio ] = Array ;
    (33) Atribuicao -> INTR . ID [ Vazio ] = Matriz ;
    (34) Atribuicao -> INTR . error ;
    (10) AtribuicoesINT -> . AtribuicaoINT
    (11) AtribuicoesINT -> . AtribuicoesINT , AtribuicaoINT
    (12) AtribuicaoINT -> . ID = Expressao
    (13) AtribuicaoINT -> . ID

    ID              shift and go to state 24
    error           shift and go to state 25

    AtribuicoesINT                 shift and go to state 23
    AtribuicaoINT                  shift and go to state 26

state 8

    (14) Atribuicao -> FLOATR . AtribuicoesFLOAT ;
    (35) Atribuicao -> FLOATR . error ;
    (15) AtribuicoesFLOAT -> . AtribuicaoFLOAT
    (16) AtribuicoesFLOAT -> . AtribuicoesFLOAT , AtribuicaoFLOAT
    (17) AtribuicaoFLOAT -> . ID = Expressao
    (18) AtribuicaoFLOAT -> . ID

    error           shift and go to state 28
    ID              shift and go to state 30

    AtribuicoesFLOAT               shift and go to state 27
    AtribuicaoFLOAT                shift and go to state 29

state 9

    (19) Atribuicao -> STRR . AtribuicoesSTRING ;
    (36) Atribuicao -> STRR . error ;
    (20) AtribuicoesSTRING -> . AtribuicaoSTRING
    (21) AtribuicoesSTRING -> . AtribuicoesSTRING , AtribuicaoSTRING
    (22) AtribuicaoSTRING -> . ID = String ;

    error           shift and go to state 32
    ID              shift and go to state 34

    AtribuicoesSTRING              shift and go to state 31
    AtribuicaoSTRING               shift and go to state 33

state 10

    (37) Instrucao -> Atualiza . ;

    ;               shift and go to state 35


state 11

    (49) Instrucao -> PRINT . ( Expressao ) ;
    (50) Instrucao -> PRINT . ( ExpLogica ) ;
    (51) Instrucao -> PRINT . ( ExpressaoFloat ) ;
    (52) Instrucao -> PRINT . ( String ) ;

    (               shift and go to state 36


state 12

    (53) Instrucao -> PRINTLN . ( Expressao ) ;
    (54) Instrucao -> PRINTLN . ( ExpLogica ) ;
    (55) Instrucao -> PRINTLN . ( ExpressaoFloat ) ;
    (56) Instrucao -> PRINTLN . ( String ) ;

    (               shift and go to state 37


state 13

    (57) Instrucao -> IF . Boolean { Instrucoes }
    (58) Instrucao -> IF . Boolean { Instrucoes } Else
    (64) Boolean -> . Expressao
    (65) Boolean -> . ExpLogica
    (70) Expressao -> . Expressao + Expressao
    (71) Expressao -> . Expressao - Expressao
    (72) Expressao -> . Expressao * Expressao
    (73) Expressao -> . Expressao / Expressao
    (74) Expressao -> . Expressao % Expressao
    (97) Expressao -> . Valor
    (99) Expressao -> . ( Expressao )
    (101) ExpLogica -> . Expressao EQUAL Expressao
    (102) ExpLogica -> . Expressao DIFF Expressao
    (103) ExpLogica -> . Expressao > Expressao
    (104) ExpLogica -> . Expressao < Expressao
    (105) ExpLogica -> . Expressao GEQUAL Expressao
    (106) ExpLogica -> . Expressao LEQUAL Expressao
    (107) ExpLogica -> . ExpressaoFloat EQUAL ExpressaoFloat
    (108) ExpLogica -> . ExpressaoFloat DIFF ExpressaoFloat
    (109) ExpLogica -> . ExpressaoFloat > ExpressaoFloat
    (110) ExpLogica -> . ExpressaoFloat < ExpressaoFloat
    (111) ExpLogica -> . ExpressaoFloat GEQUAL ExpressaoFloat
    (112) ExpLogica -> . ExpressaoFloat LEQUAL ExpressaoFloat
    (113) ExpLogica -> . Expressao EQUAL ExpressaoFloat
    (114) ExpLogica -> . Expressao DIFF ExpressaoFloat
    (115) ExpLogica -> . Expressao > ExpressaoFloat
    (116) ExpLogica -> . Expressao < ExpressaoFloat
    (117) ExpLogica -> . Expressao GEQUAL ExpressaoFloat
    (118) ExpLogica -> . Expressao LEQUAL ExpressaoFloat
    (119) ExpLogica -> . ExpressaoFloat EQUAL Expressao
    (120) ExpLogica -> . ExpressaoFloat DIFF Expressao
    (121) ExpLogica -> . ExpressaoFloat > Expressao
    (122) ExpLogica -> . ExpressaoFloat < Expressao
    (123) ExpLogica -> . ExpressaoFloat GEQUAL Expressao
    (124) ExpLogica -> . ExpressaoFloat LEQUAL Expressao
    (125) ExpLogica -> . ( ExpLogica )
    (126) ExpLogica -> . ExpLogica AND ExpLogica
    (127) ExpLogica -> . ExpLogica OR ExpLogica
    (128) ExpLogica -> . NOT ExpLogica
    (87) Valor -> . VARINT
    (89) Valor -> . VARARRAY [ Expressao ]
    (90) Valor -> . VARARRAY [ Expressao ] [ Expressao ]
    (91) Valor -> . INT
    (93) Valor -> . INTR ( String )
    (95) Valor -> . INTR ( ExpressaoFloat )
    (75) ExpressaoFloat -> . ExpressaoFloat + ExpressaoFloat
    (76) ExpressaoFloat -> . ExpressaoFloat - ExpressaoFloat
    (77) ExpressaoFloat -> . ExpressaoFloat * ExpressaoFloat
    (78) ExpressaoFloat -> . ExpressaoFloat / ExpressaoFloat
    (79) ExpressaoFloat -> . Expressao + ExpressaoFloat
    (80) ExpressaoFloat -> . Expressao - ExpressaoFloat
    (81) ExpressaoFloat -> . Expressao * ExpressaoFloat
    (82) ExpressaoFloat -> . Expressao / ExpressaoFloat
    (83) ExpressaoFloat -> . ExpressaoFloat + Expressao
    (84) ExpressaoFloat -> . ExpressaoFloat - Expressao
    (85) ExpressaoFloat -> . ExpressaoFloat * Expressao
    (86) ExpressaoFloat -> . ExpressaoFloat / Expressao
    (98) ExpressaoFloat -> . ValorFloat
    (100) ExpressaoFloat -> . ( ExpressaoFloat )
    (88) ValorFloat -> . VARFLOAT
    (92) ValorFloat -> . FLOAT
    (94) ValorFloat -> . FLOATR ( String )
    (96) ValorFloat -> . FLOATR ( Expressao )

    (               shift and go to state 42
    NOT             shift and go to state 44
    VARINT          shift and go to state 45
    VARARRAY        shift and go to state 46
    INT             shift and go to state 47
    INTR            shift and go to state 48
    VARFLOAT        shift and go to state 50
    FLOAT           shift and go to state 51
    FLOATR          shift and go to state 52

    Boolean                        shift and go to state 38
    Expressao                      shift and go to state 39
    ExpLogica                      shift and go to state 40
    Valor                          shift and go to state 41
    ExpressaoFloat                 shift and go to state 43
    ValorFloat                     shift and go to state 49

state 14

    (61) Instrucao -> FOR . ( Atualiza ; Boolean ; Atualiza ) { Instrucoes }
    (62) Instrucao -> FOR . ( Vazio ; Boolean ; Atualiza ) { Instrucoes }

    (               shift and go to state 53


state 15

    (63) Instrucao -> WHILE . Boolean { Instrucoes }
    (64) Boolean -> . Expressao
    (65) Boolean -> . ExpLogica
    (70) Expressao -> . Expressao + Expressao
    (71) Expressao -> . Expressao - Expressao
    (72) Expressao -> . Expressao * Expressao
    (73) Expressao -> . Expressao / Expressao
    (74) Expressao -> . Expressao % Expressao
    (97) Expressao -> . Valor
    (99) Expressao -> . ( Expressao )
    (101) ExpLogica -> . Expressao EQUAL Expressao
    (102) ExpLogica -> . Expressao DIFF Expressao
    (103) ExpLogica -> . Expressao > Expressao
    (104) ExpLogica -> . Expressao < Expressao
    (105) ExpLogica -> . Expressao GEQUAL Expressao
    (106) ExpLogica -> . Expressao LEQUAL Expressao
    (107) ExpLogica -> . ExpressaoFloat EQUAL ExpressaoFloat
    (108) ExpLogica -> . ExpressaoFloat DIFF ExpressaoFloat
    (109) ExpLogica -> . ExpressaoFloat > ExpressaoFloat
    (110) ExpLogica -> . ExpressaoFloat < ExpressaoFloat
    (111) ExpLogica -> . ExpressaoFloat GEQUAL ExpressaoFloat
    (112) ExpLogica -> . ExpressaoFloat LEQUAL ExpressaoFloat
    (113) ExpLogica -> . Expressao EQUAL ExpressaoFloat
    (114) ExpLogica -> . Expressao DIFF ExpressaoFloat
    (115) ExpLogica -> . Expressao > ExpressaoFloat
    (116) ExpLogica -> . Expressao < ExpressaoFloat
    (117) ExpLogica -> . Expressao GEQUAL ExpressaoFloat
    (118) ExpLogica -> . Expressao LEQUAL ExpressaoFloat
    (119) ExpLogica -> . ExpressaoFloat EQUAL Expressao
    (120) ExpLogica -> . ExpressaoFloat DIFF Expressao
    (121) ExpLogica -> . ExpressaoFloat > Expressao
    (122) ExpLogica -> . ExpressaoFloat < Expressao
    (123) ExpLogica -> . ExpressaoFloat GEQUAL Expressao
    (124) ExpLogica -> . ExpressaoFloat LEQUAL Expressao
    (125) ExpLogica -> . ( ExpLogica )
    (126) ExpLogica -> . ExpLogica AND ExpLogica
    (127) ExpLogica -> . ExpLogica OR ExpLogica
    (128) ExpLogica -> . NOT ExpLogica
    (87) Valor -> . VARINT
    (89) Valor -> . VARARRAY [ Expressao ]
    (90) Valor -> . VARARRAY [ Expressao ] [ Expressao ]
    (91) Valor -> . INT
    (93) Valor -> . INTR ( String )
    (95) Valor -> . INTR ( ExpressaoFloat )
    (75) ExpressaoFloat -> . ExpressaoFloat + ExpressaoFloat
    (76) ExpressaoFloat -> . ExpressaoFloat - ExpressaoFloat
    (77) ExpressaoFloat -> . ExpressaoFloat * ExpressaoFloat
    (78) ExpressaoFloat -> . ExpressaoFloat / ExpressaoFloat
    (79) ExpressaoFloat -> . Expressao + ExpressaoFloat
    (80) ExpressaoFloat -> . Expressao - ExpressaoFloat
    (81) ExpressaoFloat -> . Expressao * ExpressaoFloat
    (82) ExpressaoFloat -> . Expressao / ExpressaoFloat
    (83) ExpressaoFloat -> . ExpressaoFloat + Expressao
    (84) ExpressaoFloat -> . ExpressaoFloat - Expressao
    (85) ExpressaoFloat -> . ExpressaoFloat * Expressao
    (86) ExpressaoFloat -> . ExpressaoFloat / Expressao
    (98) ExpressaoFloat -> . ValorFloat
    (100) ExpressaoFloat -> . ( ExpressaoFloat )
    (88) ValorFloat -> . VARFLOAT
    (92) ValorFloat -> . FLOAT
    (94) ValorFloat -> . FLOATR ( String )
    (96) ValorFloat -> . FLOATR ( Expressao )

    (               shift and go to state 42
    NOT             shift and go to state 44
    VARINT          shift and go to state 45
    VARARRAY        shift and go to state 46
    INT             shift and go to state 47
    INTR            shift and go to state 48
    VARFLOAT        shift and go to state 50
    FLOAT           shift and go to state 51
    FLOATR          shift and go to state 52

    Boolean                        shift and go to state 54
    Expressao                      shift and go to state 39
    ExpLogica                      shift and go to state 40
    Valor                          shift and go to state 41
    ExpressaoFloat                 shift and go to state 43
    ValorFloat                     shift and go to state 49

state 16
